   
  ZOOKEEPER-1403. zkCli.sh script quoting issue (James Page via phunt)
   
  ZOOKEEPER-1384. test-cppunit overrides LD_LIBRARY_PATH and fails if
  gcc is in non-standard location (Jay Shrauner via phunt)
  
  ZOOKEEPER-1419. Leader election never settles for a 5-node cluster
  (flavio via camille)
  
  ZOOKEEPER-1256. ClientPortBindTest is failing on Mac OS X
  (Daniel Gómez Ferro via phunt)
   
IMPROVEMENTS:

  ZOOKEEPER-1389. it would be nice if start-foreground used exec $JAVA
  in order to get rid of the intermediate shell process
  (Roman Shaposhnik via phunt)

  ZOOKEEPER-1377. add support for dumping a snapshot file content (similar to LogFormatter). (phunt via camille)


Release 3.4.3 - 2012-02-06

Backward compatible changes:

BUGFIXES: 

  ZOOKEEPER-1089. zkServer.sh status does not work due to invalid
  option of nc (Roman Shaposhnik via phunt)

  ZOOKEEPER-1345. Add a .gitignore file with general exclusions and
  Eclipse project files excluded (Harsh J via phunt)

  ZOOKEEPER-1343. getEpochToPropose should check if lastAcceptedEpoch is greater or equal than epoch (fpj via breed)
  
  ZOOKEEPER-1358. In StaticHostProviderTest.java, testNextDoesNotSleepForZero tests that hostProvider.next(0) 
  doesn't sleep by checking that the latency of this call is less than 10sec (Alex Shraer via camille)
  
  ZOOKEEPER-1351. invalid test verification in MultiTransactionTest (phunt via camille)

  ZOOKEEPER-973. bind() could fail on Leader because it does not
  setReuseAddress on its ServerSocket (Harsh J via phunt)

  ZOOKEEPER-1367. Data inconsistencies and unexpired ephemeral nodes after cluster restart.
  (Bejamin Reed via mahadev)

  ZOOKEEPER-1353. C client test suite fails consistently.
  (Clint Byrum via mahadev)

  ZOOKEEPER-1373. Hardcoded SASL login context name clashes with Hadoop security 
  configuration override. (Eugene Koontz and Thomas Weise via mahadev)

  ZOOKEEPER-1352. server.InvalidSnapshotTest is using connection timeouts that 